# asyncmake.nvim

./: .gitignore  Makefile  README.md  flake.nix  pyproject.toml
lua/asyncmake/: init.lua
rplugin/python3/: plugin.py
src/asyncmake/exec/: base.py  make.py
src/asyncmake/parse/: base.py  parser.py
src/asyncmake/search/: base.py  searcher.py
test/: test_exec.py  test_parser.py  test_search.py
test/data/: Makefile
