[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "asyncmake-nvim"
version = "0.1.0"
authors = [{name = "Juan Lara", email = "julara@unal.edu.co"}]
description = "Neovim plugin for asynchronous calls to GNU Make."
requires-python = ">=3.9"
dependencies = [
    "pydantic", "pynvim"
]

[tool.setuptools.packages.find]
where = ["src/"]

[project.optional-dependencies]
dev = ["flit", "black", "pytest"]
